Refactor code in GenericRepository to call UnitOfWork to make the repository of each item would only receive one DbContext

--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,5 @@ FodyWeavers.xsd
 /Infrastructure/Repository/InMemoryToDoItemRepository.cs
 /Infrastructure/Repository/SqlToDoItemRepository.cs
 /Infrastructure/Repository/DesignTimeDbContextFactory.cs
+/ToDoList/GlobalUsing.cs
+/UseCases/IToDoItemRepository.cs
